--- a/app/src/main/res/drawable/ic_sendbutton.xml
+++ b/app/src/main/res/drawable/ic_sendbutton.xml
@@ -5,6 +5,6 @@
     android:viewportWidth="25.0"
     android:viewportHeight="25.0">
     <path
-        android:fillColor="#00e6e6"
+        android:fillColor="#4C00CE"
         android:pathData="M0.05,21L24,12 0.05,3 7,10l15,2 -15,2z"/>
 </vector>
