--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
             android:background="#fff"
             android:divider="#fff"
             android:scrollbars="vertical"
-            app:layout_constraintBottom_toTopOf="@+id/editText2"
+            app:layout_constraintBottom_toTopOf="@+id/editText"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.43"
             app:layout_constraintStart_toStartOf="parent"
@@ -44,14 +44,15 @@
             tools:layout_editor_absoluteY="8dp">
 
             <EditText
-                android:id="@+id/editText2"
+                android:id="@+id/editText"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
                 android:ems="10"
                 android:inputType="text"
                 android:padding="10dp"
-                android:text="type here"
+                android:hint="You better start talking"
+                android:text=""
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -64,6 +65,7 @@
                 android:layout_marginTop="5dp"
                 android:background="@drawable/ic_sendbutton"
                 android:padding="20dp"
+                android:onClick="SendMessage"
                 android:scaleType="fitCenter" />
         </LinearLayout>
 
